--- a/liveTest.html
+++ b/liveTest.html
@@ -22,21 +22,25 @@ const TRAIN_ID = "27"; // change train here
 const output = document.getElementById("output");
 
 let stationMap = {};
+let map, marker;
+let snapshotTaken = false;
 
 // 1️⃣ Load station list
 async function loadStations() {
-  const res = await fetch(
-    `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
-  );
-  const json = await res.json();
-  (json.Response || []).forEach(st => {
-    stationMap[String(st.StationDetailsId)] = st.StationName;
-  });
-  console.log("Station map loaded:", stationMap);
+  try {
+    const res = await fetch(
+      `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
+    );
+    const json = await res.json();
+    (json.Response || []).forEach(st => {
+      stationMap[String(st.StationDetailsId)] = st.StationName;
+    });
+  } catch (err) {
+    console.error("Failed to load stations", err);
+  }
 }
 
 // 2️⃣ Initialize Google Map
-let map, marker;
 function initMap(lat = 0, lon = 0) {
   map = new google.maps.Map(document.getElementById("map"), {
     center: { lat, lng: lon },
@@ -49,7 +53,7 @@ function initMap(lat = 0, lon = 0) {
   });
 }
 
-// 3️⃣ Start WebSocket
+// 3️⃣ Start WebSocket and get **only current live position**
 async function startWebSocket() {
   await loadStations();
 
@@ -60,18 +64,17 @@ async function startWebSocket() {
   ws.onopen = () => {
     ws.send("40"); // socket.io handshake
     ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe
-    output.textContent = "Connected & waiting for live data…";
   };
 
   ws.onmessage = (e) => {
-    if (!e.data.startsWith("42")) return;
+    if (!e.data.startsWith("42") || snapshotTaken) return;
 
     const payload = JSON.parse(e.data.slice(2));
     const live = payload[1];
 
     if (!live || live.loc === undefined) return;
 
-    // Map station IDs to names
+    // Take only the **current live snapshot**
     const lastCrossed = stationMap[live.prev_st] || live.prev_st;
     const nextStation = stationMap[live.next_st] || live.next_st;
 
@@ -88,24 +91,23 @@ async function startWebSocket() {
       status: live.st === "A" ? "RUNNING" : "STOPPED"
     };
 
+    // Show **fixed current status** (snapshot)
     output.textContent = JSON.stringify(result, null, 2);
 
-    // Update marker on Google Map
+    // Show marker on map
     if (!map) initMap(live.lat, live.lon);
     marker.setPosition({ lat: live.lat, lng: live.lon });
     map.panTo({ lat: live.lat, lng: live.lon });
+
+    snapshotTaken = true; // stop further updates
+    ws.close();           // stop WebSocket
   };
 
   ws.onerror = () => {
     output.textContent = "Failed to load live status.";
   };
-
-  ws.onclose = () => {
-    console.warn("WebSocket closed");
-  };
 }
 
-// 4️⃣ Start everything
 startWebSocket();
 </script>
 
