--- a/liveTest.html
+++ b/liveTest.html
@@ -9,6 +9,12 @@
       height: 400px;
       margin-top: 20px;
     }
+    pre {
+      background: #f5f5f5;
+      padding: 10px;
+      border-radius: 5px;
+      overflow-x: auto;
+    }
   </style>
 </head>
 <body>
@@ -18,25 +24,24 @@
 <div id="map"></div>
 
 <script>
-const TRAIN_ID = "27"; // change train here
+const TRAIN_ID = "27"; // change train number here
 const output = document.getElementById("output");
 
 let stationMap = {};
-let map, marker;
 let snapshotTaken = false;
+let map, marker;
 
-// 1️⃣ Load station list
+// 1️⃣ Load station list once
 async function loadStations() {
   try {
-    const res = await fetch(
-      `https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`
-    );
+    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
     const json = await res.json();
     (json.Response || []).forEach(st => {
       stationMap[String(st.StationDetailsId)] = st.StationName;
     });
+    console.log("Station map loaded:", stationMap);
   } catch (err) {
-    console.error("Failed to load stations", err);
+    console.error("Failed to load stations:", err);
   }
 }
 
@@ -44,26 +49,25 @@ async function loadStations() {
 function initMap(lat = 0, lon = 0) {
   map = new google.maps.Map(document.getElementById("map"), {
     center: { lat, lng: lon },
-    zoom: 6,
+    zoom: 6
   });
   marker = new google.maps.Marker({
     position: { lat, lng: lon },
     map,
-    title: "Train location",
+    title: "Train location"
   });
 }
 
-// 3️⃣ Start WebSocket and get **only current live position**
+// 3️⃣ Start WebSocket to get live data
 async function startWebSocket() {
   await loadStations();
 
-  const ws = new WebSocket(
-    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
-  );
+  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
 
   ws.onopen = () => {
-    ws.send("40"); // socket.io handshake
-    ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe
+    ws.send("40"); // Socket.IO handshake
+    ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe to train
+    output.textContent = "Connected & waiting for live data…";
   };
 
   ws.onmessage = (e) => {
@@ -74,13 +78,13 @@ async function startWebSocket() {
 
     if (!live || live.loc === undefined) return;
 
-    // Take only the **current live snapshot**
-    const lastCrossed = stationMap[live.prev_st] || live.prev_st;
+    // Map station IDs → names
+    const lastCrossedStation = stationMap[live.prev_st] || live.prev_st;
     const nextStation = stationMap[live.next_st] || live.next_st;
 
     const result = {
       trainId: TRAIN_ID,
-      lastCrossedStation: lastCrossed,
+      lastCrossedStation: lastCrossedStation,
       nextStation: nextStation,
       currentLocation: live.sp > 0 ? "Between stations" : "At station",
       latitude: live.lat,
@@ -91,27 +95,30 @@ async function startWebSocket() {
       status: live.st === "A" ? "RUNNING" : "STOPPED"
     };
 
-    // Show **fixed current status** (snapshot)
+    // Show snapshot
     output.textContent = JSON.stringify(result, null, 2);
 
-    // Show marker on map
+    // Show on map
     if (!map) initMap(live.lat, live.lon);
     marker.setPosition({ lat: live.lat, lng: live.lon });
     map.panTo({ lat: live.lat, lng: live.lon });
 
-    snapshotTaken = true; // stop further updates
-    ws.close();           // stop WebSocket
+    snapshotTaken = true; // take only 1 snapshot
+    ws.close(); // stop receiving further updates
   };
 
   ws.onerror = () => {
     output.textContent = "Failed to load live status.";
   };
+
+  ws.onclose = () => {
+    console.log("WebSocket closed after snapshot");
+  };
 }
 
+// Start everything
 startWebSocket();
 </script>
 
-<!-- Google Maps API -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6TqtNKXjuXBMYe0iuFQjvrVFJOQ__3jc"></script>
 </body>
 </html>
