--- a/liveTest.html
+++ b/liveTest.html
@@ -4,121 +4,92 @@
   <meta charset="UTF-8">
   <title>Pakistan Railways – Current Train Status</title>
   <style>
-    #map {
-      width: 100%;
-      height: 400px;
-      margin-top: 20px;
-    }
-    pre {
-      background: #f5f5f5;
-      padding: 10px;
-      border-radius: 5px;
-      overflow-x: auto;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    #map { width: 100%; height: 400px; margin-top: 20px; }
+    pre { background: #f5f5f5; padding: 15px; border-radius: 5px; }
   </style>
 </head>
 <body>
 
-<h3>Pakistan Railways – Current Train Status</h3>
+<h2>Pakistan Railways – Current Train Status</h2>
+<label for="trainId">Train ID:</label>
+<input type="text" id="trainId" value="27" />
+<button id="getStatusBtn">Get Current Status</button>
+
 <pre id="output">Loading current status…</pre>
 <div id="map"></div>
 
 <script>
-const TRAIN_ID = "27"; // change train number here
+let map, marker;
 const output = document.getElementById("output");
 
-let stationMap = {};
-let snapshotTaken = false;
-let map, marker;
+async function getTrainStatus() {
+  const trainId = document.getElementById("trainId").value.trim();
+  if (!trainId) return alert("Enter Train ID");
 
-// 1️⃣ Load station list once
-async function loadStations() {
+  output.textContent = "Fetching current status…";
+
   try {
-    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
-    const json = await res.json();
-    (json.Response || []).forEach(st => {
+    // 1️⃣ Fetch station list for this train
+    const stationsRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
+    const stationsJson = await stationsRes.json();
+    const stationMap = {};
+    (stationsJson.Response || []).forEach(st => {
       stationMap[String(st.StationDetailsId)] = st.StationName;
     });
-    console.log("Station map loaded:", stationMap);
+
+    // 2️⃣ Fetch current train snapshot (use first train event from live API)
+    const liveRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainLiveStatus?id=${trainId}`);
+    const liveJson = await liveRes.json();
+    const liveData = liveJson.Response || liveJson;
+
+    if (!liveData) {
+      output.textContent = "No live data available.";
+      return;
+    }
+
+    const result = {
+      trainId: trainId,
+      trainName: liveData.TrainName || "Unknown",
+      lastCrossedStation: stationMap[liveData.PrevStationId] || liveData.PrevStationId,
+      nextStation: stationMap[liveData.NextStationId] || liveData.NextStationId,
+      currentLocation: liveData.Speed > 0 ? "Between stations" : "At station",
+      latitude: liveData.Latitude,
+      longitude: liveData.Longitude,
+      delayMinutes: liveData.DelayMinutes,
+      speedKmh: liveData.Speed,
+      nextStationETA: liveData.NextStationETA,
+      status: liveData.Status || (liveData.Speed > 0 ? "RUNNING" : "STOPPED")
+    };
+
+    output.textContent = JSON.stringify(result, null, 2);
+
+    // 3️⃣ Show marker on Google Map
+    if (!map) {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: result.latitude, lng: result.longitude },
+        zoom: 6,
+      });
+      marker = new google.maps.Marker({
+        position: { lat: result.latitude, lng: result.longitude },
+        map,
+        title: `Train ${result.trainName} (${result.trainId})`
+      });
+    } else {
+      marker.setPosition({ lat: result.latitude, lng: result.longitude });
+      map.panTo({ lat: result.latitude, lng: result.longitude });
+    }
+
   } catch (err) {
-    console.error("Failed to load stations:", err);
+    console.error(err);
+    output.textContent = "Failed to fetch current status.";
   }
 }
 
-// 2️⃣ Initialize Google Map
-function initMap(lat = 0, lon = 0) {
-  map = new google.maps.Map(document.getElementById("map"), {
-    center: { lat, lng: lon },
-    zoom: 6
-  });
-  marker = new google.maps.Marker({
-    position: { lat, lng: lon },
-    map,
-    title: "Train location"
-  });
-}
-
-// 3️⃣ Start WebSocket to get live data
-async function startWebSocket() {
-  await loadStations();
-
-  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
-
-  ws.onopen = () => {
-    ws.send("40"); // Socket.IO handshake
-    ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe to train
-    output.textContent = "Connected & waiting for live data…";
-  };
-
-  ws.onmessage = (e) => {
-    if (!e.data.startsWith("42") || snapshotTaken) return;
-
-    const payload = JSON.parse(e.data.slice(2));
-    const live = payload[1];
-
-    if (!live || live.loc === undefined) return;
-
-    // Map station IDs → names
-    const lastCrossedStation = stationMap[live.prev_st] || live.prev_st;
-    const nextStation = stationMap[live.next_st] || live.next_st;
-
-    const result = {
-      trainId: TRAIN_ID,
-      lastCrossedStation: lastCrossedStation,
-      nextStation: nextStation,
-      currentLocation: live.sp > 0 ? "Between stations" : "At station",
-      latitude: live.lat,
-      longitude: live.lon,
-      delayMinutes: live.late_by,
-      speedKmh: live.sp,
-      nextStationETA: live.NextStationETA,
-      status: live.st === "A" ? "RUNNING" : "STOPPED"
-    };
-
-    // Show snapshot
-    output.textContent = JSON.stringify(result, null, 2);
-
-    // Show on map
-    if (!map) initMap(live.lat, live.lon);
-    marker.setPosition({ lat: live.lat, lng: live.lon });
-    map.panTo({ lat: live.lat, lng: live.lon });
-
-    snapshotTaken = true; // take only 1 snapshot
-    ws.close(); // stop receiving further updates
-  };
-
-  ws.onerror = () => {
-    output.textContent = "Failed to load live status.";
-  };
-
-  ws.onclose = () => {
-    console.log("WebSocket closed after snapshot");
-  };
-}
-
-// Start everything
-startWebSocket();
+document.getElementById("getStatusBtn").addEventListener("click", getTrainStatus);
 </script>
 
+<!-- Google Maps API: replace YOUR_API_KEY below with your actual API key -->
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 </body>
 </html>
