--- a/liveTest.html
+++ b/liveTest.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Pakistan Railways – Current Train Status</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
+    body { font-family: Arial; margin: 20px; }
     #map { width: 100%; height: 400px; margin-top: 20px; }
     pre { background: #f5f5f5; padding: 15px; border-radius: 5px; }
   </style>
@@ -21,75 +21,102 @@
 
 <script>
 let map, marker;
-const output = document.getElementById("output");
 
-async function getTrainStatus() {
-  const trainId = document.getElementById("trainId").value.trim();
-  if (!trainId) return alert("Enter Train ID");
+async function getCurrentStatus() {
+  const TRAIN_ID = document.getElementById("trainId").value.trim();
+  const output = document.getElementById("output");
+  output.textContent = "Connecting to live feed…";
 
-  output.textContent = "Fetching current status…";
+  let stationMap = {};
 
+  // 1️⃣ Load station list
   try {
-    // 1️⃣ Fetch station list for this train
-    const stationsRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
-    const stationsJson = await stationsRes.json();
-    const stationMap = {};
-    (stationsJson.Response || []).forEach(st => {
+    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`);
+    const json = await res.json();
+    (json.Response || []).forEach(st => {
       stationMap[String(st.StationDetailsId)] = st.StationName;
     });
-
-    // 2️⃣ Fetch current train snapshot (use first train event from live API)
-    const liveRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainLiveStatus?id=${trainId}`);
-    const liveJson = await liveRes.json();
-    const liveData = liveJson.Response || liveJson;
-
-    if (!liveData) {
-      output.textContent = "No live data available.";
-      return;
-    }
-
-    const result = {
-      trainId: trainId,
-      trainName: liveData.TrainName || "Unknown",
-      lastCrossedStation: stationMap[liveData.PrevStationId] || liveData.PrevStationId,
-      nextStation: stationMap[liveData.NextStationId] || liveData.NextStationId,
-      currentLocation: liveData.Speed > 0 ? "Between stations" : "At station",
-      latitude: liveData.Latitude,
-      longitude: liveData.Longitude,
-      delayMinutes: liveData.DelayMinutes,
-      speedKmh: liveData.Speed,
-      nextStationETA: liveData.NextStationETA,
-      status: liveData.Status || (liveData.Speed > 0 ? "RUNNING" : "STOPPED")
-    };
-
-    output.textContent = JSON.stringify(result, null, 2);
-
-    // 3️⃣ Show marker on Google Map
-    if (!map) {
-      map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: result.latitude, lng: result.longitude },
-        zoom: 6,
-      });
-      marker = new google.maps.Marker({
-        position: { lat: result.latitude, lng: result.longitude },
-        map,
-        title: `Train ${result.trainName} (${result.trainId})`
-      });
-    } else {
-      marker.setPosition({ lat: result.latitude, lng: result.longitude });
-      map.panTo({ lat: result.latitude, lng: result.longitude });
-    }
-
   } catch (err) {
     console.error(err);
-    output.textContent = "Failed to fetch current status.";
+    output.textContent = "Failed to load station list.";
+    return;
   }
+
+  // 2️⃣ Connect to WebSocket
+  const ws = new WebSocket("wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket");
+
+  let snapshotTaken = false;
+
+  ws.onopen = () => {
+    ws.send("40"); // socket.io handshake
+    ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe
+    output.textContent = "Connected & waiting for first live update…";
+  };
+
+  ws.onmessage = (e) => {
+    if (!e.data.startsWith("42") || snapshotTaken) return;
+
+    try {
+      const payload = JSON.parse(e.data.slice(2));
+      const live = payload[1];
+
+      if (!live) return;
+
+      // Build snapshot
+      const result = {
+        trainId: TRAIN_ID,
+        lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
+        nextStation: stationMap[live.next_st] || live.next_st,
+        currentLocation: live.sp > 0 ? "Between stations" : "At station",
+        latitude: live.lat,
+        longitude: live.lon,
+        delayMinutes: live.late_by,
+        speedKmh: live.sp,
+        nextStationETA: live.NextStationETA,
+        status: live.st === "A" ? "RUNNING" : "STOPPED"
+      };
+
+      output.textContent = JSON.stringify(result, null, 2);
+
+      // Show marker on map
+      if (!map) {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: result.latitude, lng: result.longitude },
+          zoom: 6,
+        });
+        marker = new google.maps.Marker({
+          position: { lat: result.latitude, lng: result.longitude },
+          map,
+          title: `Train ${TRAIN_ID}`
+        });
+      } else {
+        marker.setPosition({ lat: result.latitude, lng: result.longitude });
+        map.panTo({ lat: result.latitude, lng: result.longitude });
+      }
+
+      snapshotTaken = true;
+      ws.close(); // stop after first snapshot
+
+    } catch (err) {
+      console.error("Failed to parse live data:", err);
+    }
+  };
+
+  ws.onerror = (err) => {
+    console.error("WebSocket error:", err);
+    output.textContent = "Failed to load live status.";
+  };
+
+  ws.onclose = () => {
+    console.log("WebSocket closed");
+  };
 }
 
-document.getElementById("getStatusBtn").addEventListener("click", getTrainStatus);
+document.getElementById("getStatusBtn").addEventListener("click", getCurrentStatus);
 </script>
 
-<!-- Google Maps API: replace YOUR_API_KEY below with your actual API key -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6TqtNKXjuXBMYe0iuFQjvrVFJOQ__3jc"></script>
+<!-- Google Maps API -->
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+
 </body>
 </html>
