--- a/liveTest.html
+++ b/liveTest.html
@@ -116,7 +116,7 @@ document.getElementById("getStatusBtn").addEventListener("click", getCurrentStat
 </script>
 
 <!-- Google Maps API -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6TqtNKXjuXBMYe0iuFQjvrVFJOQ__3jc"></script>
 
 </body>
 </html>
