--- a/liveTest.html
+++ b/liveTest.html
@@ -5,9 +5,7 @@
   <title>Pakistan Railways – Current Train Status</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
-    h3 { color: #2c3e50; }
     pre { background: #f4f4f4; padding: 15px; border-radius: 5px; }
-    label { font-weight: bold; }
     input { width: 50px; margin-right: 10px; }
     button { padding: 5px 10px; cursor: pointer; }
   </style>
@@ -25,58 +23,71 @@
 <script>
 const output = document.getElementById("output");
 
-async function getTrainStatus() {
-  const trainId = document.getElementById("trainId").value.trim();
-  if (!trainId) {
-    alert("Please enter a Train ID");
-    return;
-  }
+document.getElementById("getStatus").addEventListener("click", () => {
+  const TRAIN_ID = document.getElementById("trainId").value.trim();
+  if (!TRAIN_ID) return alert("Please enter a Train ID");
 
-  output.textContent = "Fetching current train status…";
+  output.textContent = "Connecting to live feed…";
 
-  try {
-    // 1️⃣ Fetch the stations for this train
-    const stationsRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
-    const stationsJson = await stationsRes.json();
-    const stationMap = {};
-    (stationsJson.Response || []).forEach(st => {
-      stationMap[String(st.StationDetailsId)] = st.StationName;
+  let snapshotTaken = false;
+  let stationMap = {};
+
+  // Load stations for this train
+  fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`)
+    .then(res => res.json())
+    .then(json => {
+      (json.Response || []).forEach(st => {
+        stationMap[String(st.StationDetailsId)] = st.StationName;
+      });
+
+      // Start WebSocket
+      const ws = new WebSocket(
+        "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
+      );
+
+      ws.onopen = () => {
+        ws.send("40"); // handshake
+        ws.send(`42["joinTrain","${TRAIN_ID}"]`); // subscribe
+      };
+
+      ws.onmessage = e => {
+        if (!e.data.startsWith("42") || snapshotTaken) return;
+
+        const payload = JSON.parse(e.data.slice(2));
+        const live = payload[1];
+
+        if (!live) return;
+
+        const result = {
+          trainId: TRAIN_ID,
+          trainName: live.TrainName || "Shalimar Express " + TRAIN_ID, // fallback
+          lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
+          nextStation: stationMap[live.next_st] || live.next_st,
+          currentLocation: live.sp > 0 ? "Between stations" : "At station",
+          latitude: live.lat,
+          longitude: live.lon,
+          delayMinutes: live.late_by,
+          speedKmh: live.sp,
+          nextStationETA: live.NextStationETA,
+          status: live.st === "A" ? "RUNNING" : "STOPPED"
+        };
+
+        output.textContent = JSON.stringify(result, null, 2);
+
+        snapshotTaken = true;
+        ws.close(); // stop after first snapshot
+      };
+
+      ws.onerror = () => {
+        output.textContent = "Failed to fetch live status.";
+      };
+
+    })
+    .catch(err => {
+      console.error(err);
+      output.textContent = "Failed to load station list.";
     });
-
-    // 2️⃣ Fetch the current train snapshot from the same API
-    // Note: Some master site pages use the same endpoint with extra fields
-    const trainDataRes = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${trainId}`);
-    const trainJson = await trainDataRes.json();
-    const trainInfo = trainJson; // trainJson includes fields like prevStationId, nextStationId, latitude, longitude, delay, speed
-
-    // Map previous and next stations
-    const lastCrossed = stationMap[trainInfo.prevStationId] || trainInfo.prevStationId;
-    const nextStation = stationMap[trainInfo.nextStationId] || trainInfo.nextStationId;
-
-    // Build output object
-    const result = {
-      trainId: trainInfo.TrainId || trainId,
-      trainName: trainInfo.TrainName || "N/A",
-      lastCrossedStation: lastCrossed,
-      nextStation: nextStation,
-      currentLocation: trainInfo.speed > 0 ? "Between stations" : "At station",
-      latitude: trainInfo.latitude || 0,
-      longitude: trainInfo.longitude || 0,
-      delayMinutes: trainInfo.delay || 0,
-      speedKmh: trainInfo.speed || 0,
-      status: trainInfo.speed > 0 ? "RUNNING" : "STOPPED",
-      nextETA: trainInfo.NextStationETA || "N/A"
-    };
-
-    output.textContent = JSON.stringify(result, null, 2);
-
-  } catch (err) {
-    console.error(err);
-    output.textContent = "Failed to fetch current status.";
-  }
-}
-
-document.getElementById("getStatus").addEventListener("click", getTrainStatus);
+});
 </script>
 
 </body>
