--- a/liveTest.html
+++ b/liveTest.html
@@ -1,62 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Pakistan Railways – Current Train Status</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    pre { background: #f4f4f4; padding: 15px; border-radius: 5px; }
-    input { width: 50px; margin-right: 10px; }
-    button { padding: 5px 10px; cursor: pointer; }
-  </style>
+<meta charset="UTF-8">
+<title>Pakistan Railways – Current Train Status</title>
+<style>
+body { font-family: Arial; margin: 20px; }
+pre { background: #f4f4f4; padding: 15px; }
+</style>
 </head>
 <body>
 
 <h3>Pakistan Railways – Current Train Status</h3>
-
-<label for="trainId">Train ID:</label>
-<input type="text" id="trainId" value="27">
-<button id="getStatus">Get Current Status</button>
-
-<pre id="output">Loading current status…</pre>
+<pre id="output">Loading…</pre>
 
 <script>
+const TRAIN_ID = "27";
 const output = document.getElementById("output");
 
-document.getElementById("getStatus").addEventListener("click", async () => {
-  const TRAIN_ID = document.getElementById("trainId").value.trim();
-  if (!TRAIN_ID) return alert("Please enter a Train ID");
+let stationMap = {};
+let bestLive = null;
+let startTime = Date.now();
 
-  output.textContent = "Fetching current status…";
-
-  try {
-    const res = await fetch(`https://app-api.pakraillive.com/api/Train/GetTrainById?id=${TRAIN_ID}`);
-    if (!res.ok) throw new Error("API request failed");
-
-    const json = await res.json();
-    if (!json) throw new Error("No data received");
-
-    const result = {
-      trainId: json.TrainId,
-      trainName: json.TrainName || `Train ${TRAIN_ID}`,
-      delayMinutes: json.delay,
-      speedKmh: json.speed,
-      lastUpdate: new Date(json.lastUpdate * 1000).toLocaleString(),
-      nextStation: json.nextStation || "N/A",
-      lastStation: json.prevStation || "N/A",
-      latitude: json.latitude || 0,
-      longitude: json.longitude || 0,
-      status: json.IsLive ? "RUNNING" : "STOPPED",
-      estimatedArrival: json.eta || "N/A"
-    };
-
-    output.textContent = JSON.stringify(result, null, 2);
-
-  } catch (err) {
-    console.error(err);
-    output.textContent = "Failed to fetch current status.";
-  }
+// Load stations
+fetch(`https://app-api.pakraillive.com/api/Train/GetTrainStationsByTrainId?id=${TRAIN_ID}`)
+.then(r => r.json())
+.then(j => {
+  (j.Response || []).forEach(s => {
+    stationMap[String(s.StationDetailsId)] = s.StationName;
+  });
+  startSocket();
 });
+
+function startSocket() {
+  const ws = new WebSocket(
+    "wss://cotrolroomapi.pakraillive.com/socket.io/?EIO=4&transport=websocket"
+  );
+
+  ws.onopen = () => {
+    ws.send("40");
+    ws.send(`42["joinTrain","${TRAIN_ID}"]`);
+  };
+
+  ws.onmessage = e => {
+    if (!e.data.startsWith("42")) return;
+
+    const live = JSON.parse(e.data.slice(2))[1];
+    if (!live || !live.lat) return;
+
+    if (!bestLive || live.lastUpdate > bestLive.lastUpdate) {
+      bestLive = live;
+    }
+
+    // After 15 seconds → finalize
+    if (Date.now() - startTime > 15000) {
+      ws.close();
+      render(bestLive);
+    }
+  };
+
+  ws.onerror = () => {
+    output.textContent = "Live feed error.";
+  };
+}
+
+function render(live) {
+  output.textContent = JSON.stringify({
+    trainId: TRAIN_ID,
+    lastCrossedStation: stationMap[live.prev_st] || live.prev_st,
+    nextStation: stationMap[live.next_st] || live.next_st,
+    latitude: live.lat,
+    longitude: live.lon,
+    delayMinutes: live.late_by,
+    speedKmh: live.sp,
+    status: live.st === "A" ? "RUNNING" : "STOPPED",
+    note: "Best-effort snapshot (WebSocket is not authoritative)"
+  }, null, 2);
+}
 </script>
 
 </body>
